@@ -174,6 +174,9 @@ my @crts = (
   [ [ ["-2155972909982577461","8509855219791386062"],
       ["-5396280069505638574","6935743629860450393"] ],
     "12941173114744545542549046204020289525" ],
+  [ [[3,5],[2,0]], undef ],       # three tests that we handle zeros.
+  [ [[3,0],[2,3]], undef ],
+  [ [[3,5],[3,0],[2,3]], undef ],
 );
 
 
